<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/home_header_bg"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:contentDescription="@null"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/img_first_album_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <LinearLayout
            android:id="@+id/home_hero_actions_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="18dp"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/btn_home_mike"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="6dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/btn_main_mike"
                android:contentDescription="@string/btn_home_mike"/>

            <ImageButton
                android:id="@+id/btn_home_ticket"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="6dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/btn_main_ticket"
                android:contentDescription="@string/btn_home_ticket"/>

            <ImageButton
                android:id="@+id/btn_home_setting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="6dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/btn_main_setting"
                android:contentDescription="@string/btn_home_setting"/>
        </LinearLayout>

        <!-- 상단 배너 추천 플레이 리스트 캐러셀 -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_playlist_pager"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:layout_constraintTop_toBottomOf="@id/home_hero_actions_ll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Dots Indicator -->
        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/home_playlist_pager_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:dotsColor="#CDCDCD"
            app:selectedDotColor="#3050F7"
            app:dotsSize="10dp"
            app:dotsSpacing="10dp"
            app:layout_constraintTop_toBottomOf="@id/home_playlist_pager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>